# CCNLTHD

./: .gitattributes  .gitignore  .gitlab-ci.yml  Dockerfile.frontend  HOW-TO.md  README.md  package-lock.json  package.json
Lectures/: Evaluate_Subject.txt
Main_Project/: .gitignore  BACKEND_INTEGRATION.md  setup.sh  (+3 more)
Main_Project/Backend/Multi-agents-service/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  report.md
Main_Project/Backend/Multi-agents-service/.claude/rules/: architecture.md
Main_Project/Backend/Multi-agents-service/data/: dataset_fundamental.csv  dataset_orchestrator.csv  dataset_screening.csv
Main_Project/Backend/Multi-agents-service/docs/: orchestrator_dataset_standards.md
Main_Project/Backend/Multi-agents-service/notebooks/: 02_datasets_eda_metrics.py  nb_01_sample_run.ipynb  nb_02_eda.ipynb
Main_Project/Backend/Multi-agents-service/src/fin_agents/graphs/workflow/stock_advisory/: prompts_chat.py
Main_Project/Backend/Multi-agents-service/src/stock_analysis/: crew.py  main.py
Main_Project/Backend/Multi-agents-service/src/stock_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
Main_Project/Backend/Multi-agents-service/src/stock_analysis/config/: agents.yaml  tasks.yaml
Main_Project/Backend/Multi-agents-service/src/stock_analysis/tools/: custom_tools.py
Main_Project/Backend/Multi-agents-service/storage/portfolios/: STK20260513080734_context.json  STK20260513081145_context.json
Main_Project/Backend/Multi-agents-service/storage/reports/: STK20260513080734.md  STK20260513081145.md
Main_Project/Backend/market-data-service/: Dockerfile  junit-results.xml  main.py  pom.xml  pyproject.toml  requirements-test.txt  requirements.txt
Main_Project/Backend/market-data-service/app/: analytics_service.py  config.py  database.py  kafka_producer.py  main.py  market_service.py  models.py  router.py  scheduler.py  schemas.py  vn_index_service.py
Main_Project/Backend/market-data-service/src/main/resources/: application.yml
Main_Project/Backend/market-data-service/tests/: conftest.py  test_analytics_service.py  test_router.py
Main_Project/Backend/multi-agents-service/: .dockerignore  .env.example  .env.example1  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
Main_Project/Backend/multi-agents-service/config/: __init__.py  agents.yaml  compliance_rules.yaml  config.yaml  risk_bands.yaml
Main_Project/Backend/multi-agents-service/db/migrations/: 001_initial_schema.sql  002_normalize_nullable_fk.sql
Main_Project/Backend/multi-agents-service/docs/: api_reference.md  architecture.md  deployment.md
Main_Project/Backend/multi-agents-service/docs1/: crewai_stock_analysis_review.md  knowledge_base_input_standards.md  orchestrator_dataset_standards_v2.1.md
Main_Project/Backend/multi-agents-service/scripts/: setup_db.py
Main_Project/Backend/multi-agents-service/src/fin_agents/: __init__.py
Main_Project/Backend/multi-agents-service/src/fin_agents/agents/: __init__.py  agent_loader.py  base.py  commentary_agent.py  data_agent.py  metrics_agent.py  news_agent.py  parse_agent.py  portfolio_agent.py  registry.py  report_agent.py  validation_agent.py
Main_Project/Backend/multi-agents-service/src/fin_agents/api/: __init__.py  dependencies.py  main.py  routes.py  schemas.py  sessions.py  upload.py
Main_Project/Backend/multi-agents-service/src/fin_agents/config/: __init__.py  loader.py
Main_Project/Backend/multi-agents-service/src/fin_agents/core/: __init__.py  config.py  llm_config.py  orchestrator.py  text_sanitizer.py
Main_Project/Backend/multi-agents-service/src/fin_agents/core/finance/: __init__.py  data_fetcher.py  metrics.py  report.py  visualization.py
Main_Project/Backend/multi-agents-service/src/fin_agents/core/ingestion/: __init__.py  context_builder.py  file_processor.py
Main_Project/Backend/multi-agents-service/src/fin_agents/core/market/: __init__.py  tavily_news.py  yahoo_finance.py
Main_Project/Backend/multi-agents-service/src/fin_agents/db/: __init__.py  database.py  models.py  repositories.py
Main_Project/Backend/multi-agents-service/src/fin_agents/graphs/: __init__.py  registry.py
Main_Project/Backend/multi-agents-service/src/fin_agents/graphs/workflow/: intent_router.py
Main_Project/Backend/multi-agents-service/src/fin_agents/tools/: __init__.py  error_tool.py  langchain_tools.py  market_data_service_client.py  market_news_tool.py  notification_service_client.py  output_tool.py  portfolio_service_client.py  user_service_client.py
Main_Project/Backend/multi-agents-service/tests/: __init__.py  conftest.py
Main_Project/Backend/multi-agents-service/tests/integration/: test_api.py  test_api_portfolio.py  test_orchestrator.py  test_workflow.py  test_workflow_integration.py
Main_Project/Backend/multi-agents-service/tests/langsmith/: evaluators.py  test_advisory_evaluation.py
Main_Project/Backend/multi-agents-service/tests/unit/: test_agents.py  test_chat_workflows.py  test_data_fetcher.py  test_metrics.py  test_nodes.py  test_report.py  test_routing.py  test_schemas.py  test_state.py  test_tools.py  test_visualization.py
(+598 files in other folders)
