[project]
name = "stock_analysis"
version = "0.1.0"
description = "AI Intelligence Service — multi-agent stock analysis for VN market (HOSE)"
authors = [{name = "CCNLTHD team", email = "team@example.com"}]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0",
    "python-dotenv>=1.0.1",
    "html2text>=2024.2.26",
    "sec-api>=1.0.20",
    "litellm>=1.75.0",
    "fastapi>=0.100.0",
    "apscheduler>=3.10.0",
    "email-validator>=2.0.0",
    "embedchain>=0.0.18",
]

[project.scripts]
stock_analysis = "stock_analysis.main:run"
train = "stock_analysis.main:train"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_analysis"]

[tool.hatch.build.targets.wheel.force-include]
"src/stock_analysis/config" = "stock_analysis/config"

[tool.uv]
package = true
