[project]
name = "stock_analysis"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "python-dotenv>=1.0.1",
    "html2text>=2024.2.26",
    "sec-api>=1.0.20",
    "litellm>=1.75.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.30.0",
    "apscheduler>=3.10.0",
    "email-validator>=2.0.0",
    "embedchain>=0.0.18",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.10.1",
    "langgraph>=1.1.3",
    "langchain>=1.2.13",
    "sqlalchemy>=2.0.49",
    "psycopg2-binary>=2.9.12",
    "alembic>=1.18.4",
    "redis>=7.4.0",
    "pandas>=3.0.2",
    "numpy>=2.3.2",
    "scikit-learn>=1.8.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.2",
    "httpx>=0.28.1",
    "structlog>=25.5.0",
    "prometheus-client>=0.25.0",
    "sse-starlette>=2.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "faker>=40.15.0",
    "black>=26.3.1",
    "flake8>=7.3.0",
    "mypy>=1.20.2",
    "pre-commit>=4.6.0",
    "yfinance>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=0.3.0",
    "langchain-openrouter>=0.2.0",
    "tavily-python>=0.7.23",
    "plotly>=6.7.0",
    "langchain-tavily>=0.2.18",
    "vnstock>=4.0.2",
    "vnstock3>=3.2.1",
]

[dependency-groups]
dev = [
    "fastapi[standard]",
    "pytest",
    "coverage",
    "pdbpp>=0.11.6",
    ]

[project.scripts]
fin_agents = "fin_agents.main:run"
train = "fin_agents.main:train"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true
