[project]
name = "market-data-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy==2.0.36",
    "psycopg2-binary==2.9.10",
    "kafka-python-ng==2.2.3",
    "py-eureka-client==0.11.13",
    "apscheduler==3.10.4",
    "vnstock==3.2.5",
    "pandas==2.2.3",
    "python-dotenv==1.0.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "httpx==0.27.2",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "pytest-asyncio==0.23.8",
    "pytest-mock==3.14.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --tb=short"
