[project]
name = "stock_analysis"
version = "0.1.0"
requires-python = ">=3.12,<3.14"
dependencies = [
    "python-dotenv>=1.0.1",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.11.10",
    "langgraph>=1.1.3",
    "langchain>=1.2.13",
    "sqlalchemy>=2.0.49",
    "psycopg2-binary>=2.9.12",
    "pandas>=3.0.2",
    "numpy>=2.3.2",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.2",
    "httpx>=0.28.1",
    "prometheus-client>=0.25.0",
    "sse-starlette>=2.0.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "yfinance>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=0.3.0",
    "langchain-openrouter>=0.2.0",
    "tavily-python>=0.7.23",
    "plotly>=6.7.0",
    "langchain-tavily>=0.2.18",
    "vnstock>=4.0.2",
    "vnstock3>=3.2.1",
    "langsmith>=0.2.0",
]

[dependency-groups]
dev = [
    "fastapi[standard]",
    "pytest",
    "coverage",
    "pdbpp>=0.11.6",
    ]

[project.scripts]
fin_agents = "fin_agents.main:run"
train = "fin_agents.main:train"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests — no external calls",
    "integration: Integration tests — mocked externals",
    "langsmith: LangSmith evaluation tests — requires LANGCHAIN_API_KEY",
    "slow: Slow tests (network/LLM calls)",
]

[tool.uv]
package = true
